# Asynchronous_tasking

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
